--- a/static/css/style.css
+++ b/static/css/style.css
@@ -404,6 +404,18 @@ li > a:only-child:after {
     min-height: 20em;
 }
 
+.bg1 {
+    background-color: rgba(0, 0, 0, 0);
+    margin-top: 0;
+    background-image: url('../single-post-pic.jpg');
+}
+
+.bg2 {
+    background-color: rgba(0, 0, 0, 0);
+    margin-top: 0;
+    background-image: url('../single-post-pic2.jpg');
+}
+
 /*-- place holder --*/
 
 .banner-form ::-webkit-input-placeholder {
