--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -6,7 +6,7 @@
         <button class="btn1 btn" ><span class="fa fa-search" aria-hidden="true" ></span></button>
     </form>
 </div>
-<form action="{% url 'filter' %}" method="get">
+<form action="{% url 'json_filter' %}" method="get" name="filter">
     <div class="left-side my-4">
         <h3 class="sear-head editContent">Жанры</h3>
         <ul class="w3layouts-box-list">
