Added showing average value of film rating

--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -72,7 +72,7 @@
                                 <label for="rating{{ v }}">{{ k }}</label>
                             {% endfor %}
                         </span>
-                        <span class="editContent">5.0</span>
+                        <span class="editContent">{{avg_rating}}</span>
                     </form>
                 </li>
                 <div class="share-desc">
